Fixed layout issues. Still rough draft
Layout of the website works on full screen however still need to complete making webpage responsive while resizing window.

--- a/style.css
+++ b/style.css
@@ -11,7 +11,12 @@
     margin: 0;
     padding-left: 100px;
     padding-right: 100px;
-    padding-top: 10px;
+    padding-top: 20px;
+ }
+
+ .navBar a {
+    padding-left: 15px;
+    text-align: right;
  }
 
 .logo img {
@@ -20,9 +25,10 @@
  }
 .sectionOne{
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 100px;
+    padding-right: 100px;
 }
 .logo{
     font-size:24px;
@@ -40,18 +46,18 @@
 .mainSection{
     display: flex;
     justify-content: space-between;
-    padding: 50px 50px;
+    padding: 80px 100px 80px 100px;
 }
 
 .mainLeft{
    flex-direction: column;
+   margin-right: 15%;
 }
 
 .mainText {
     font-size: 48px;
     font-weight: bolder;
     color: #F9FAF8;
-    word-wrap: normal;
 }
 
 .secondaryText{
@@ -64,11 +70,19 @@
     align-items: flex-start;
 }
 
+.mainRight img {
+    object-fit: cover;
+    height:300px;
+    width:700px;
+    object-position: center;
+}
+
 .signupButton button {
     color: white;
     border: 0;
     height: 30px;
     width: 100px;
+    margin-top: 20px;
     border-radius: 9px;
     background-color: #3882F6;
 }
@@ -78,8 +92,13 @@
     flex-direction: column;
     /* justify-content: center; */
     align-items: center;
-    /* padding: 0 250px 0 250px; */
-    border: red solid;
+    padding: 0 250px 70px 250px; 
+}
+
+.insideMidContainer {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .header {
@@ -91,21 +110,30 @@
 
 .images {
     display: flex;
-    justify-content: center;
-    border: red solid;
 }
 
+.middleImages {
+    border-radius: 20px;
+    margin: 0px;
+}
 
-.images img {
+.middleImages img{
     height: 150px;
     width: 150px;
-    border-radius: 8px;
+    border-radius: 1em;
+    margin-right: 30px;
 }
 
-.images p{
-    border:red solid;
-    justify-content: center;
-    margin: 0 90px 0 90px;
+.description {
+    display: flex;
+}
+
+.description p{
+    height: 150px;
+    width: 150px;
+    text-align: center;
+    margin-right: 30px;
+    background-color: rgb(240, 240, 240);
 }
 
 .quoteSection {
